# Symbol-extractor-assessment

./: README.md  Requirements.txt  app.py  main.py  pyproject.toml  test.py  test_metadata.py
metadata/: symbols.json
models/: symbol.py
processors/: metadata_generator.py  pdf_processors.py  symbol_detector.py  vectorizer.py
utils/: metadata.py
