[project]
name = "system-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.2",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "processors>=0.0.12",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
    "svgwrite>=1.4.3",
    "uvicorn>=0.49.0",
]
